[gd_scene load_steps=13 format=3 uid="uid://dl4od1hog4mht"]

[ext_resource type="Script" path="res://wheelselect.gd" id="1_mtu81"]
[ext_resource type="Texture2D" uid="uid://similhkjd2x4" path="res://images/Random Images/blkback.jpg" id="2_je061"]
[ext_resource type="Texture2D" uid="uid://dywhvg32bta3q" path="res://images/Icons/Breaking Bad Logo.png" id="3_pprmv"]
[ext_resource type="Texture2D" uid="uid://blgfaspurafx1" path="res://images/Icons/Family Guy Logo.png" id="4_mb7pe"]
[ext_resource type="Texture2D" uid="uid://cltxdfih3igjh" path="res://images/Icons/Fortnite Logo.png" id="5_ans6j"]
[ext_resource type="Texture2D" uid="uid://dxik5hg57wgrp" path="res://SlotMachine/WhiteFive.png" id="6_2fqn4"]
[ext_resource type="Texture2D" uid="uid://du3f421c32ax" path="res://images/Icons/Marvel Logo.png" id="7_y587r"]
[ext_resource type="Texture2D" uid="uid://c3v3dvgn4stan" path="res://images/Icons/Miscellaneous Logo.png" id="8_v511o"]
[ext_resource type="Texture2D" uid="uid://dj0o117gge446" path="res://images/Icons/SpongeBobIconNew.png" id="9_n68bx"]
[ext_resource type="Texture2D" uid="uid://cnwca07apx88v" path="res://images/Icons/The Boys Logo.png" id="10_tstx1"]
[ext_resource type="FontFile" uid="uid://dpen4mjgiv7pg" path="res://Miscellaneous Stuff/Budmo font/budmo jiggler.otf" id="11_pcqsn"]
[ext_resource type="AudioStream" uid="uid://chl2q76jafi30" path="res://sound/music/kane.mp3" id="12_15ei3"]

[node name="wheelselect" type="Node2D"]
script = ExtResource("1_mtu81")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(550, 965)
scale = Vector2(1.22444, 1.19875)
texture = ExtResource("2_je061")

[node name="breakingb" type="Button" parent="."]
offset_left = 489.0
offset_top = 1017.0
offset_right = 3057.0
offset_bottom = 2551.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("3_pprmv")
flat = true
expand_icon = true

[node name="famguy" type="Button" parent="."]
offset_left = 28.0
offset_top = 984.0
offset_right = 1236.0
offset_bottom = 1709.0
scale = Vector2(0.35, 0.35)
icon = ExtResource("4_mb7pe")
flat = true

[node name="fortnite" type="Button" parent="."]
z_index = 1
offset_left = 645.0
offset_top = 1584.0
offset_right = 953.0
offset_bottom = 1873.0
icon = ExtResource("5_ans6j")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="fortnite"]
z_index = -1
position = Vector2(153, 149)
scale = Vector2(9.40625, 9.3125)
texture = ExtResource("6_2fqn4")

[node name="marvel" type="Button" parent="."]
offset_left = 629.0
offset_top = 1373.0
offset_right = 991.0
offset_bottom = 1523.0
icon = ExtResource("7_y587r")

[node name="misc" type="Button" parent="."]
z_index = 1
offset_left = 81.0
offset_top = 702.0
offset_right = 1555.0
offset_bottom = 2173.0
scale = Vector2(0.17, 0.17)
icon = ExtResource("8_v511o")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="misc"]
z_index = -1
position = Vector2(723.529, 747.059)
scale = Vector2(47.0625, 45.1875)
texture = ExtResource("6_2fqn4")

[node name="spongeb" type="Button" parent="."]
offset_left = 523.0
offset_top = 690.0
offset_right = 962.0
offset_bottom = 1008.0
icon = ExtResource("9_n68bx")

[node name="theboys" type="Button" parent="."]
offset_left = 77.0
offset_top = 1253.0
offset_right = 1252.0
offset_bottom = 2511.0
scale = Vector2(0.26, 0.26)
icon = ExtResource("10_tstx1")
flat = true

[node name="backbutton" type="Button" parent="."]
offset_left = 92.0
offset_top = 1704.0
offset_right = 275.0
offset_bottom = 1866.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_15ei3")
autoplay = true

[node name="Currency" type="Label" parent="."]
offset_left = 27.0
offset_top = 125.0
offset_right = 1037.0
offset_bottom = 286.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 65
text = "Costs 2 tokens per spin: 
Your Tokens:
"
horizontal_alignment = 1

[node name="Title" type="Label" parent="."]
offset_left = 27.0
offset_top = 1.0
offset_right = 1037.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 100
text = "Select A spinner!"
horizontal_alignment = 1

[node name="Currency7" type="Label" parent="."]
offset_left = 27.0
offset_top = 605.0
offset_right = 1037.0
offset_bottom = 666.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Your Tokens:
"
horizontal_alignment = 1

[node name="Currency6" type="Label" parent="."]
offset_left = 23.0
offset_top = 545.0
offset_right = 1033.0
offset_bottom = 734.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Your Tokens:
"
horizontal_alignment = 1

[node name="Currency5" type="Label" parent="."]
offset_left = 25.0
offset_top = 483.0
offset_right = 1035.0
offset_bottom = 672.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Your Tokens:
"
horizontal_alignment = 1

[node name="Currency4" type="Label" parent="."]
offset_left = 23.0
offset_top = 433.0
offset_right = 1033.0
offset_bottom = 622.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Your Tokens:
"
horizontal_alignment = 1

[node name="Currency3" type="Label" parent="."]
offset_left = 21.0
offset_top = 379.0
offset_right = 1031.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Your Tokens:
"
horizontal_alignment = 1

[node name="Currency2" type="Label" parent="."]
offset_left = 21.0
offset_top = 325.0
offset_right = 1031.0
offset_bottom = 386.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Your Tokens:
"
horizontal_alignment = 1

[node name="Currency1" type="Label" parent="."]
offset_left = 21.0
offset_top = 277.0
offset_right = 1031.0
offset_bottom = 338.0
theme_override_fonts/font = ExtResource("11_pcqsn")
theme_override_font_sizes/font_size = 50
text = "Your Tokens:
"
horizontal_alignment = 1

[connection signal="button_down" from="breakingb" to="." method="_on_breakingb_button_down"]
[connection signal="button_down" from="famguy" to="." method="_on_famguy_button_down"]
[connection signal="button_down" from="fortnite" to="." method="_on_fortnite_button_down"]
[connection signal="button_down" from="marvel" to="." method="_on_marvel_button_down"]
[connection signal="button_down" from="misc" to="." method="_on_misc_button_down"]
[connection signal="button_down" from="spongeb" to="." method="_on_spongeb_button_down"]
[connection signal="button_down" from="theboys" to="." method="_on_theboys_button_down"]
[connection signal="pressed" from="backbutton" to="." method="_on_backbutton_pressed"]
